# rust_cookbook

./: .gitignore
01_assign/: assignment  assignment.rs
02_bool/: bool  bool.rs
03_decimal/: decimal.rs
04_sample/: sample.rs
ch_01/01_assign/: assignment
ch_01/03_decimal/: decimal.rs
ch_01/04_arithmatic/: sample
ch_01/05_mut_variables/: mut_variables
ch_01/06_strings/: string  string.rs
ch_01/08_vectors/: vectors.rs
ch_01_intro/01_assign/: assignment.rs
ch_01_intro/02_bool/: bool  bool.rs
ch_01_intro/03_decimal/: decimal
ch_01_intro/04_arithmatic/: arithmetic  arithmetic.rs
ch_01_intro/05_mut_variables/: mut_variables.rs
ch_01_intro/07_arrays_slices/: arrays_slices  arrays_slices.rs
ch_01_intro/08_vectors/: vectors
ch_01_intro/09_tuples/: tuples  tuples.rs
ch_01_intro/10_calculator/: calculator  calculator.rs
ch_02_advanced_programming/: README.md
ch_02_advanced_programming/01_expressions/: expressions  expressions.rs
ch_02_advanced_programming/02_constants/: constants  constants.rs
ch_02_advanced_programming/03_var_bindings/: binding  binding.rs
ch_02_advanced_programming/04_type_casting/: typecasting  typecasting.rs
ch_02_advanced_programming/05_decisions/: descisions  descisions.rs
ch_02_advanced_programming/06_loops/: loops  loops.rs
ch_03_cargo/: README.md
ch_03_cargo/hello_world/: Cargo.toml
ch_03_cargo/hello_world/src/: main.rs
ch_04_crates_modules/: README.md
ch_05_parallelism/: README.md
ch_06_error_handling/: README.md
ch_06_error_handling/11_boxing/: box  (+1 more)
ch_07_macros/: README.md
misc/: match.rs
(+82 files in other folders)
